test/natTypes.slq
def foo():0{ foo(); } // ok
def fun():1{ } // ok
def baz():1337{ return baz(); } // error
